--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -19,7 +19,7 @@ body {
 }
 
 ::selection {
-  background: lighten($primary-color, 72%);
+  background: darken($primary-color, 18%);
 }
 
 ::-moz-selection {
@@ -144,7 +144,7 @@ ul {
 
 code {
   padding: .1em .4em;
-  background: lighten($secondary-color, 32%);
+  background: lighten($secondary-color, 12%);
   border: 1px solid lighten($secondary-color, 25%);
   border-radius: $border-radius;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
@@ -156,7 +156,7 @@ code {
 pre {
   margin-bottom: 1.3em;
   padding: 1em 2.5%;
-  background: lighten($secondary-color, 32%);
+  background: lighten($secondary-color, 12%);
   border: 1px solid lighten($secondary-color, 25%);
   border-radius: $border-radius;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
