--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -22,7 +22,7 @@ $secondary-color:   #5BA4E5;
 $link-color:        $primary-color;
 $hover-color:       darken($link-color, 15%);
 
-$sans-font:         "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Georgia","Hiragino Sans GB W3","Microsoft YaHei","DFKai-SB","FangSong","KaiTi_GB2312",sans-serif;
-$serif-font:        "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Georgia","Hiragino Sans GB W3","Microsoft YaHei","DFKai-SB","FangSong","KaiTi_GB2312",sans-serif;
+$sans-font:         "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Georgia","Hiragino Sans GB W3","SimSun","Kaiti","DFKai-SB","Microsoft YaHei",sans-serif;
+$serif-font:        "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Georgia","Hiragino Sans GB W3","SimSun","Kaiti","DFKai-SB","Microsoft YaHei",sans-serif;
 
 $border-radius:     3px;
